--- a/prcdmp_node/package.xml
+++ b/prcdmp_node/package.xml
@@ -24,6 +24,7 @@
   <depend>pluginlib</depend>
   <depend>realtime_tools</depend>
   <depend>roscpp</depend>
+  <depend>std_msgs</depend>
 
   <exec_depend>franka_control</exec_depend>
   <exec_depend>franka_description</exec_depend>
