--- a/config/prcdmp_node.yaml
+++ b/config/prcdmp_node.yaml
@@ -28,5 +28,15 @@ dmpstart_velocity_controller:
         - panda_joint5
         - panda_joint6
         - panda_joint7
+dmp_ct_velocity_controller:
+    type: prcdmp_node/DmpVelocityController
+    joint_names:
+        - panda_joint1
+        - panda_joint2
+        - panda_joint3
+        - panda_joint4
+        - panda_joint5
+        - panda_joint6
+        - panda_joint7
 
 
