--- a/src/DMP/CMakeLists.txt
+++ b/src/DMP/CMakeLists.txt
@@ -3,13 +3,13 @@ project(DMP)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(    CMAKE_RUNTIME_OUTPUT_DIRECTORY
-        ${CMAKE_HOME_DIRECTORY}/RLF/bin
-    )
+#set(    CMAKE_RUNTIME_OUTPUT_DIRECTORY
+#        ${CMAKE_HOME_DIRECTORY}/RLF/bin
+#    )
 
-set(    CMAKE_LIBRARY_OUTPUT_DIRECTORY
-        ${CMAKE_HOME_DIRECTORY}/lib
-    )
+#set(    CMAKE_LIBRARY_OUTPUT_DIRECTORY
+#        ${CMAKE_HOME_DIRECTORY}/lib
+#    )
 
 find_package (Eigen3 3.3 REQUIRED NO_MODULE)
 
