added debugDummy class to allow simpler debugging

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,6 +54,9 @@ add_library(prcdmp_node
 add_executable(serviceDummy src/serviceDummy.cpp)
 target_link_libraries(serviceDummy ${catkin_LIBRARIES})
 
+add_executable(debugDummy src/debugDummy.cpp)
+target_link_libraries(debugDummy ${catkin_LIBRARIES} ${Franka_LIBRARIES} DMP UTILS Eigen3::Eigen jsoncpp prcdmp_node)
+
 add_dependencies(prcdmp_node
   ${${PROJECT_NAME}_EXPORTED_TARGETS}
   ${catkin_EXPORTED_TARGETS}
