--- a/config/prcdmp_node.yaml
+++ b/config/prcdmp_node.yaml
@@ -29,6 +29,16 @@ dmpstart_velocity_controller:
         - panda_joint5
         - panda_joint6
         - panda_joint7
+dmpviap_controller:
+    type: prcdmp_node/DmpViapController
+    joint_names:
+        - panda_joint1
+        - panda_joint2
+        - panda_joint3
+        - panda_joint4
+        - panda_joint5
+        - panda_joint6
+        - panda_joint7
 dmp_ct_velocity_controller:
     type: prcdmp_node/DmpCtVelocityController
     joint_names:
